--- a/index.html
+++ b/index.html
@@ -53,30 +53,21 @@
 
       <!-- Shopping Cart start -->
       <div class="shopping-cart">
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1">
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
+        <template x-for="(p, i) in $store.cart.items" x-keys="i">
+          <div class="cart-item">
+            <img :src="`img/products/${p.img}`" :alt="p.name"/>
+            <div class="item-detail">
+              <h3 x-text="p.name"></h3>
+              <div class="item-price">
+                <span x-text="rupiah(p.price)"></span> &times;
+                <button type="button" id="remove">&minus;</button>
+                <span x-text="p.quantity"></span>
+                <button type="button" id="add">&plus;</button> &equals;
+                <span x-text="p.total">Rp 30.000</span>
+              </div>
+            </div>
           </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1">
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
-        <div class="cart-item">
-          <img src="img/products/1.jpg" alt="Product 1">
-          <div class="item-detail">
-            <h3>Product 1</h3>
-            <div class="item-price">IDR 30K</div>
-          </div>
-          <i data-feather="trash-2" class="remove-item"></i>
-        </div>
+        </template>
       </div>
       <!-- Shopping Cart end -->
 
