--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <h4 x-show="$store.cart.items.length">Total: <span x-text="rupiah($store.cart.total)"></span></h4>
 
         <div class="form-container" x-show="$store.cart.items.length">
-          <form action="" id="checkoutForm">
+          <form action="" id="checkout-form">
+            <input type="hidden" name="items" x-model="JSON.stringify($store.cart.items)"/>
+            <input type="hidden" name="total" x-model="$store.cart.total"/>
             <h5>Customer Detail</h5>
             <label for="name">
               <span>Name</span>
@@ -89,7 +91,7 @@
               <input type="number" id="phone" name="phone" autocomplete="off"/>
             </label>
 
-            <button type="submit" class="checkout-button" id="checkout-button">Checkout</button>
+            <button type="submit" class="checkout-button disabled" id="checkout-button">Checkout</button>
           </form>
         </div>
       </div>
