feat: payment with popup in midtrans

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <!-- Alpine JS -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js"></script>
+
+    <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SB-Mid-client-D_ZsdEuMCRnSTphN"></script>
   </head>
 
   <body>
@@ -55,7 +57,7 @@
       <div class="shopping-cart">
         <template x-for="(p, i) in $store.cart.items" x-keys="i">
           <div class="cart-item">
-            <img :src="p.img" :alt="p.name"/>
+            <img :src="`/img/products/${p.img}`" :alt="p.name"/>
             <div class="item-detail">
               <h3 x-text="p.name"></h3>
               <div class="item-price">
@@ -190,7 +192,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#shopping-cart" />
+                  <use href="/img/feather-sprite.svg#shopping-cart" />
                 </svg>
               </a>
               <a href="#" class="item-detail-button">
@@ -203,12 +205,12 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#eye" />
+                  <use href="/img/feather-sprite.svg#eye" />
                 </svg>
               </a>
             </div>
             <div class="product-image">
-              <img :src="p.img" :alt="p.name">
+              <img :src="`/img/products/${p.img}`" :alt="p.name">
             </div>
             <div class="product-content">
               <h3 x-text="p.name"></h3>
@@ -222,7 +224,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -233,7 +235,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -244,7 +246,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -255,7 +257,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -266,7 +268,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
                 <svg
                   width="24"
@@ -277,7 +279,7 @@
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 >
-                  <use href="feather-sprite.svg#star" />
+                  <use href="/img/feather-sprite.svg#star" />
                 </svg>
               </div>
               <div class="product-price" x-text="rupiah(p.price)"></div>
